--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,63 @@
 body {
+    font-family:Tahoma;
+    font-size:16px;
     width: 100%;
     height: 100vh;
     margin: 0;
     background-color: #1b1b32;
     color:#f5f6f7;
 }
+h1, p {
+    text-align:center;
+    margin: 1em auto;
+}
+a {
+    color:#dfdfe2;
+}
+form {
+    margin: 0 auto;
+    max-width:500px;
+    min-width: 300px;
+    width:60vw;
+    padding:2em;
+}
+fieldset {
+    border:none;
+    padding:2rem 0;
+    border-bottom: 3px solid #3b3b4f;
+}
+fieldset:last-of-type {
+    border-bottom: none;
+}
+input, textarea, select {
+    width:100%;
+    margin:10px 0 0 0;
+    min-height: 2em;
+}
+input, textarea {
+    color:#ffffff;
+    background-color:#0a0a23;
+    border: 1px solid #0a0a23;
+}
 label {
     display:block;
     margin:0.5rem 0;
 }
+.inline {
+    width:unset;
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+  }
+  input[type="submit"] {
+    display:block;
+    width:60%;
+    min-width:300px;
+    margin: 1em auto 1em auto;
+    height:2em;
+    font-size:1.1rem;
+    background-color:#3b3b4f;
+    border-color:#ffffff; 
+  }
+  input[type="file"] {
+    padding:1px 2px;
+  }
